--- a/app/src/main/res/layout/list_view_item_row.xml
+++ b/app/src/main/res/layout/list_view_item_row.xml
@@ -8,8 +8,9 @@
 
     <ImageView
         android:id="@+id/imageViewIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:paddingRight="10dp" />
